# siddhi-llvm

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  Siddhiql.g4  StreamProcessor.cpp  build.sh  consumer.cpp  main.cpp  sample.exec  sample.siddhiql
ANTLR/: README.md
Debug/: StreamProcessor.d  makefile  objects.mk  sources.mk  subdir.mk
LlvmPasses/: CMakeLists.txt  README.md  main.cpp
LlvmPasses/Transform/: CMakeLists.txt  asyncTransformer.cpp  asyncTransformer.h
LlvmPasses/costAnalysis/: CMakeLists.txt  costEstimator.cpp  costEstimator.h
Optimizer/: .gitignore  README.md  requirements.txt
Optimizer/optimizer/: config.py  constant.py  generator.py  hillclimber.py  main.py  metrics.py  optimizer_tensorflow.py  sp.sh
ThreadPoolSimulation/: CMakeLists.txt  Task.cpp  Task.h  ThreadPool.cpp  ThreadPool.h  main.cpp
kafka-io/: Producer.cpp  consumer.cpp
src/: Annotation.cpp  Annotation.h  DefinitionStream.cpp  DefinitionStream.h  ExecutionElement.cpp  ExecutionElement.h  FileReader.cpp  FileReader.h  KafkaConsumer.cpp  KafkaConsumer.h  LLVM_IR_Strings.cpp  LLVM_IR_Strings.h  MainFileCreator.cpp  MainFileCreator.h  OutputAttribute.cpp  OutputAttribute.h  Translator.cpp  Translator.h  TranslatorVisitor.cpp  TranslatorVisitor.h
src/CppFIleCreation/: ClassCreator.cpp  ClassCreator.h  FunctionCreation.cpp  Include.cpp  Include.h  Method.cpp  Method.h  PublicMembers.cpp  PublicMembers.h  Variable.cpp  Variable.h
src/cpp-file-creation/: ClassCreator.cpp  ClassCreator.h  FunctionCreation.cpp  FunctionCreation.h  Include.cpp  Include.h  Method.cpp  Method.h  PublicMembers.h  Variable.cpp  Variable.h
src/mysql_store/: mysql.cpp
src/query/: Annotation.h  DefinitionStream.cpp  DefinitionStream.h  ExecutionElement.cpp  ExecutionElement.h  OutputAttribute.h
src/source-files-for-generation/: consumer
src/tcp-io/client/: Client.cpp  Client.h
src/tcp-io/server/: Server.cpp  Server.h
stream-processor/: Buffer.cpp  Buffer.h  BufferContainer.cpp  BufferContainer.h  BufferLocker.cpp  BufferLocker.h  CMakeLists.txt  DetailContainer.cpp  DetailContainer.h  Executor.cpp  Executor.h  ExecutorCreator.cpp  ExecutorCreator.h  InputOutputMapper.cpp  InputOutputMapper.h  LogicExecution.cpp  LogicExecution.h  Main.cpp  OutputEmitter.cpp  OutputEmitter.h  PerformanceMonitor.cpp  PerformanceMonitor.h  ProcessedThreadHandler.cpp  ProcessedThreadHandler.h  WindowBufferContainer.cpp  WindowBufferContainer.h  common.h
stream-processor-generator/src/antlr/: TranslatorVisitor.cpp  TranslatorVisitor.h
stream-processor-generator/src/cpp-file-creation/: ClassCreator.cpp  ClassCreator.h  Enum.cpp  Enum.h  FunctionCreation.cpp  FunctionCreation.h  Include.h  Method.cpp  Method.h  Variable.cpp  Variable.h
stream-processor-generator/src/query/: Annotation.cpp  ArithmaticExecutorGenerator.cpp  ArithmaticExecutorGenerator.h  AttributeTypeMapper.cpp  AttributeTypeMapper.h  BufferGenerator.cpp  BufferGenerator.h  DefinitionStream.cpp  DetailContainerCreator.cpp  DetailContainerCreator.h  ExecutionElement.cpp  ExecutionElement.h  InputBufferCreator.cpp  InputBufferCreator.h  InputOutputMapper.cpp  InputOutputMapper.h  OutputEmitterGenerator.cpp  OutputEmitterGenerator.h  ProcessedThreadHandler.cpp  ProcessedThreadHandler.h  ProcessedThreadHandlerCreator.cpp  ProcessedThreadHandlerCreator.h
stream-processor/math_logic/: Average.cpp  Average.h  Sum.cpp  Sum.h
stream-processor/temp/: Consumer.cpp  Consumer.h  Producer.cpp  Producer.h
tcp/: Client.cpp  InputHandler.h  KeyValue.cpp  KeyValue.h  Mapping.cpp  Mapping.h  Server.cpp  Server.h  readme
threadpool/: Benchmark.cpp  Benchmark.h  Buffer.cpp  Buffer.h  CMakeLists.txt  ConfigParams.cpp  ConfigParams.h  Data.cpp  Data.h  InputHandler.cpp  InputHandler.h  LengthWindow.cpp  LengthWindow.h  OutputEmitter.cpp  OutputEmitter.h  Processor.cpp  Processor.h  README.md  StreamProcessor.cpp  StreamProcessor.h  ThreadPool.cpp  ThreadPool.h  TimeWindow.cpp  TimeWindow.h  Window.cpp  Window.h  common.h  llvm.sh  main.cpp
threadpool/functions/: Sum.cpp  Sum.h
